force-app/main/default/objects/Activity/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cvent Event Number</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>