force-app/main/default/objects/Activity/fields/Funding_Interest__c.field-meta.xml
<CustomField>
    <fullName>Funding_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the look up to the Volunteer Opportunities</description>
    <inlineHelpText>This is the look up to the Volunteer Opportunities</inlineHelpText>
    <label>Funding Interest</label>
    <referenceTo>ucinn_ascendv2__Funding_Interest__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>