force-app/main/default/objects/Activity/fields/ucinn_ascendv2__Comments__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>