force-app/main/default/objects/Activity/fields/ucinn_ascendv2__Contact_Donor_ID__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Contact_Donor_ID__c</fullName>
    <label>Constituent Donor ID</label>
    <length>11</length>
    <type>Text</type>
</CustomField>