force-app/main/default/objects/Activity/fields/ucinn_ascendv2__Correspondence_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Correspondence_Type__c</fullName>
    <label>Correspondence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Correspondence</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>