force-app/main/default/objects/Activity/fields/ucinn_ascendv2__Endowment_Financial__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Endowment_Financial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Endowment Financial</label>
    <referenceTo>ucinn_ascendv2__Endowment_Financials__c</referenceTo>
    <relationshipLabel>Stewardships</relationshipLabel>
    <relationshipName>Activities_Endowment_Financial</relationshipName>
    <type>Lookup</type>
</CustomField>