force-app/main/default/objects/Activity/fields/ucinn_ascendv2__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pledge</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Opportunity.RecordTypeId</field>
            <operation>equals</operation>
            <value>Pledge</value>
        </filterItems>
        <filterItems>
            <field>Opportunity.Type</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Stewardships</relationshipLabel>
    <relationshipName>Activities_Opportunity</relationshipName>
    <type>Lookup</type>
</CustomField>